<resources>
    <string name="app_name">KotlinLayout</string>

    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="dummy">dummy</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>

    <string name="start_calc_traditional">Start calculation traditional layouts</string>
    <string name="start_calc_constraint">Start calculation ConstraintLayout</string>
    <string name="finish">Finished</string>
    <string name="executing_nth_iteration">%1$d / %2$d</string>

    <string name="tool_title">Tool title</string>
    <string name="tool_subtitle">Tool subtitle</string>
    <string name="tool_action_button">action</string>

</resources>
