<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded,HardcodedText">

    <ImageView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/dummy"
        android:scaleType="centerCrop"
        android:src="@drawable/singapore"
        app:layout_constraintBottom_toBottomOf="@+id/favorite"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/info_background"
        android:contentDescription="@string/dummy"
        android:padding="5dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/singapore"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/cameraType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/camera_value"
        app:layout_constraintLeft_toLeftOf="@+id/settings"
        app:layout_constraintRight_toRightOf="@+id/settings"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/cameraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/cameraType"
        android:text="@string/camera"
        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/settings"
        android:text="@string/settings"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/camera_settings"
        app:layout_constraintLeft_toRightOf="@+id/settingsLabel"
        app:layout_constraintRight_toRightOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/cameraType" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:elevation="0dp"
        android:text="@string/discard"
        app:layout_constraintBaseline_toBaselineOf="@+id/upload"
        app:layout_constraintRight_toLeftOf="@+id/upload" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:fadingEdge="vertical"
        android:text="@string/singapore_description"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/discard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />


    <!--region frame-->
    <com.weicools.kotlinlayout.widget.Draw01LinearGradientView
        android:layout_width="20dp"
        android:layout_height="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.Draw02RadialGradientView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="24dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.Draw03SweepGradientView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="48dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.Draw04BitmapShaderView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="72dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.Draw01LinearGradientView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="96dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawArcView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="120dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawCircleView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="144dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawColorView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="168dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawLineView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="192dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawOvalView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="216dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawPathView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="240dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawPointView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="264dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawRectView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="288dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.DrawRoundRectView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="312dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.OutRippleView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="336dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.RippleView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.weicools.kotlinlayout.widget.WaveRippleView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <!--endregion-->
</androidx.constraintlayout.widget.ConstraintLayout>
